# adminPro

./: .env.dev  README-zh-CN.md  README.md  admin.yml  database.yml
back-py-mongo/: Dockerfile  README.md  pyproject.toml  requirements.txt
back-py-mongo/app/: app.py  settings.py
back-py-mongo/app/api/system/: interface.py  menu.py  role.py  users.py
back-py-mongo/app/database/: interface.json  menu.json  role.json  users.json
back-py-mongo/app/locales/: en_us.py  zh_cn.py
back-py-mongo/app/models/: base.py
back-py-mongo/app/models/system/: interface.py  menu.py  role.py  user.py
back-py-mongo/app/routers/: auth.py  init.py
back-py-mongo/app/utils/: custom_adapter.py  custom_response.py  db.py  dependencies.py
service-mongodb/: pyproject.toml
service-mongodb/app/: app.py  settings.py
service-mongodb/app/api/system/: interface.py  menu.py  role.py  syslog.py  users.py
service-mongodb/app/database/: interface.json  menu.json  role.json  users.json
service-mongodb/app/models/language/: lang.py
service-mongodb/app/models/system/: interface.py  menu.py  role.py  syslog.py  user.py
service-mongodb/app/routers/: auth.py  init.py
service-mongodb/app/static/public/_nuxt/: admin.30f068ea.css  admin.48565192.js  default.4fea82dc.js  entry.09c76acf.css  entry.3c9058c5.js  error-404.38c2df8f.js  error-500.fdc858cf.js  index.a14a77af.js  index.ecc50650.css  index.fff92134.js  welcome.ac9cca1c.js
service-mongodb/app/static/public/admin/: index.html
service-mongodb/app/utils/: custom_adapter.py  custom_response.py  db.py  dependencies.py  env_init.py
service-mongodb/tests/: db.py
(+47 files in other folders)
